[ADD] Notes's wave can be triggered & triggered nearby IInteractibles

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ MobilePuzzleGame_Project/.vsconfig
 MobilePuzzleGame_Project/Library
 MobilePuzzleGame_Project/Assets/Scripts/Utils/ScriptTemplatesLoaderTool.cs.meta
 MobilePuzzleGame_Project/Assets/Scripts/Utils/ScriptTemplatesLoaderTool.cs
+MobilePuzzleGame_Project/obj
