--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ MobilePuzzleGame_Project/Library
 MobilePuzzleGame_Project/Assets/Scripts/Utils/ScriptTemplatesLoaderTool.cs.meta
 MobilePuzzleGame_Project/Assets/Scripts/Utils/ScriptTemplatesLoaderTool.cs
 MobilePuzzleGame_Project/obj
+MobilePuzzleGame_Project/obj
